# archcraft-pkg

./: MAKEPKGBUILD  PKGBUILD  README.md  archcraft-pkg.pkg.tar.zst  archcraft-pkg.pkg.tar.zst.sig  archcraftpkg.spec  makepkgbuild.py  makepkgbuild.spec  setup.cfg  setup.py
docs/: archcraft-pkg.7
src/: archcraftpkg.py  makepkgbuild.py
