[metadata]
name = archcraft-pkg
version = 1.0.0
description = Custom Archcraft MAKEPKGBUILD tool using setuptools
author = Zaman Huseynli
author_email = zamanhuseynli23@gmail.com
license = GPLv3
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Software Development :: Build Tools

[options]
py_modules =
    makepkgbuild
    archcraftpkg
package_dir =
    = src
include_package_data = true
install_requires =

[options.entry_points]
console_scripts =
    makepkgbuild = makepkgbuild:main
    apkg = archcraftpkg:main

[options.package_data]
* =
    docs/archcraft-pkg.7
    docs/Archcraft-pkg.pdf

[tool.setuptools]
include-package-data = true
